--- a/assets/spaceship/config.toml
+++ b/assets/spaceship/config.toml
@@ -7,7 +7,7 @@
 identifier = "SpaceShip"
 
 # !REQUIRED! The path to the gltf file. This is relative to the model file.
-gltf = "spaceship.gltf"
+gltf = "scene.gltf"
 
 # Handles how the model is displayed in ui. Note that this is localized and hence the strings
 # refer to the [[localization]] sections and are not free-form text.
